--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>
+    <div class="container"> <!-- Обертка, которая дает возможность сделать сайт адаптивным -->
+        <header><!-- Шапка с именем -->
             <h1>герман дольников</h1>
         </header>
-        <div class="links">
+        <div class="links"><!-- Блок с  контактами-->
             <div class="title">
                 <h4>На связи</h4>
             </div>
@@ -24,7 +24,7 @@
             <div class="links__item"><a href="#">Linkedin</a></div>
             <div class="links__item"><a href="#">GIT</a></div>
         </div>
-        <div class="about">
+        <div class="about"> <!-- Блок описание (О себе)-->
             <div class="title">
                 <h4>Чем занимаюсь</h4>
             </div>
