--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Герман Дольников</title>
+    <title>Василий Пупкин</title>
 </head>
 
 <body>
     <div class="container"> <!-- Обертка, которая дает возможность сделать сайт адаптивным -->
         <header><!-- Шапка с именем -->
-            <h1>герман дольников</h1>
+            <h1>василий пупкин</h1>
         </header>
         <div class="links"><!-- Блок с  контактами-->
             <div class="title">
